--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 #header {
   display: grid;
   justify-items: center;
-  background-color: yellow;
+  background-color: #24527a;
   height: 150px;
   width: 1000px;
   margin-left: 460px;
@@ -16,9 +16,11 @@
 
 #main {
   margin-top: 30px;
+  color: #5dacbd;
 }
 
 #input {
+  background-color: #ececec;
   margin-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
@@ -36,14 +38,13 @@
 }
 
 #add:hover {
-  background-color:greenyellow;
+  background-color:#5dacbd;
   color: white;
 }
 
 #list {
   display: flexbox;
   margin-left: 460px;
-  
 }
 
 #list > div:nth-child(odd) {
@@ -61,7 +62,6 @@
   grid-template-columns: 9fr 1fr;
 }
 
-
 .delete:hover {
   opacity: 100;
   background-color: #F5431D;
@@ -77,19 +77,19 @@
   transition: 0.3s ease;
 }
 
-
-.checked {
-  display: inline;
-  text-decoration: line-through;
-  background-color: #7fff00;
-  color: white;
-  transition: 0.3s ease;
-}
-
 .title:hover {
   cursor: pointer;
   background-color: white;
 }
+
+.checked {
+  display: inline;
+  text-decoration: line-through;
+  background-color: rgba(106, 103, 103, 0.635);
+  color: white;
+  transition: 0.3s ease;
+}
+
 
 .checked:hover {
   color: black;
