--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-image: linear-gradient(45deg, #37e2d5, #52e5ac, #87e379, #bfdb43, #fbcb0a, #f94c66);
   background-size: 300%;
   color: white;
@@ -39,7 +39,7 @@ form {
 }
 
 header {
-  font-size: max(2em, 4vw);
+  font-size: max(4vw, 2em);
   font-weight: 900;
 }
 
@@ -59,15 +59,9 @@ form {
   font-size: 2.5em;
 }
 
-#input-title:focus {
-  background: transparent;
-  border-bottom: 3px solid white;
-}
-
-#input-title:focus + #add-container,
-#add-container:hover {
-  width: 8vh;
-  border-radius: 50%;
+#input-title,
+#add-container {
+  height: 8vh;
 }
 
 #add-container {
@@ -76,8 +70,7 @@ form {
   justify-content: center;
   align-items: center;
 }
-
-#add {
+#add-container #add {
   padding: 0.2em;
   font-size: 3.5em;
   background-image: linear-gradient(45deg, #37e2d5, #52e5ac, #87e379, #bfdb43, #fbcb0a, #f94c66);
@@ -88,9 +81,19 @@ form {
   animation: bg-animation 5s infinite alternate;
 }
 
-#input-title,
-#add {
-  height: 8vh;
+#input-title:focus {
+  background: transparent;
+  border-bottom: 3px solid white;
+}
+
+#input-title:focus + #add-container,
+#add-container:hover {
+  background: transparent;
+}
+#input-title:focus + #add-container #add,
+#add-container:hover #add {
+  color: white;
+  transform: rotateZ(180deg);
 }
 
 #list {
@@ -103,8 +106,7 @@ form {
   width: max(20em, 65%);
   list-style: none;
 }
-
-.todo {
+#list .todo {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -112,6 +114,10 @@ form {
   width: inherit;
   background: white;
   font-size: 2em;
+}
+#list .todo:hover {
+  width: max(70%, 11em);
+  margin-bottom: 0.5em;
 }
 
 .title {
