--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,13 @@
   margin: 0;
   padding: 0;
   border: none;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   outline: none;
   -moz-appearance: none;
-  transition: all 0.5s ease;
+  -webkit-appearance: none;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: default;
 }
 
@@ -19,7 +22,17 @@ body {
   background-size: 300%;
   color: white;
   font-family: "Cascadia Code";
-  animation: bg-animation 5s infinite alternate;
+  -webkit-animation: bg-animation 5s infinite alternate;
+          animation: bg-animation 5s infinite alternate;
+}
+
+@-webkit-keyframes bg-animation {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
 
 @keyframes bg-animation {
@@ -33,9 +46,15 @@ body {
 header,
 form {
   min-height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header {
@@ -53,32 +72,41 @@ form {
     min-height: 20vh;
   }
 }
+#input-title,
+#add-container {
+  height: 8vh;
+}
+
 #input-title {
   background: white;
   padding: 0.5em;
   font-size: 2.5em;
 }
 
-#input-title,
-#add-container {
-  height: 8vh;
-}
-
 #add-container {
   background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 #add-container #add {
   padding: 0.2em;
   font-size: 3.5em;
   background-image: linear-gradient(45deg, #37e2d5, #52e5ac, #87e379, #bfdb43, #fbcb0a, #f94c66);
   background-size: 300%;
-  background-clip: text;
+  -webkit-background-clip: text;
+          background-clip: text;
   background-color: white;
   color: transparent;
-  animation: bg-animation 5s infinite alternate;
+  -webkit-animation: bg-animation 5s infinite alternate;
+          animation: bg-animation 5s infinite alternate;
+  -webkit-transition-duration: 0.1s;
 }
 
 #input-title:focus {
@@ -93,23 +121,39 @@ form {
 #input-title:focus + #add-container #add,
 #add-container:hover #add {
   color: white;
-  transform: rotateZ(180deg);
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
 }
 
 #list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 0.5em;
   margin-inline: auto;
   width: max(20em, 65%);
   list-style: none;
 }
 #list .todo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 7vh;
   width: inherit;
   background: white;
@@ -121,7 +165,9 @@ form {
 }
 
 .title {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   margin: 1vh;
   color: black;
 }
@@ -146,10 +192,12 @@ form {
 
 .completed {
   opacity: 0.5;
-  text-decoration: line-through black;
+  -webkit-text-decoration: line-through black;
+          text-decoration: line-through black;
 }
 
 .deleted {
-  transform: translateY(8rem) rotateZ(20deg);
+  -webkit-transform: translateY(8rem) rotateZ(20deg);
+          transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
 }/*# sourceMappingURL=styles.css.map */
