--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
   outline: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: default;
 }
 
@@ -89,6 +89,7 @@ form {
   background: white;
   padding: 0.5em;
   font-size: 2.5em;
+  border-color: white;
 }
 
 #add-container {
@@ -122,6 +123,7 @@ form {
   color: transparent;
   -webkit-animation: bg-animation 5s infinite alternate;
   animation: bg-animation 5s infinite alternate;
+  -webkit-transition-duration: 0.1s;
 }
 
 #input-title:focus {
@@ -215,4 +217,4 @@ form {
   -webkit-transform: translateY(8rem) rotateZ(20deg);
   transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
-}
+} /*# sourceMappingURL=styles.css.map */
