--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   padding: 0;
   border: none;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   outline: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -18,20 +18,12 @@
 
 body {
   min-height: 100vh;
-  background-image: linear-gradient(
-    45deg,
-    #37e2d5,
-    #52e5ac,
-    #87e379,
-    #bfdb43,
-    #fbcb0a,
-    #f94c66
-  );
+  background-image: linear-gradient(45deg, #37e2d5, #52e5ac, #87e379, #bfdb43, #fbcb0a, #f94c66);
   background-size: 300%;
   color: white;
-  font-family: 'Cascadia Code';
+  font-family: "Cascadia Code";
   -webkit-animation: bg-animation 5s infinite alternate;
-  animation: bg-animation 5s infinite alternate;
+          animation: bg-animation 5s infinite alternate;
 }
 
 @-webkit-keyframes bg-animation {
@@ -58,11 +50,11 @@ form {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header {
@@ -71,12 +63,12 @@ header {
 }
 
 form {
-  font-size: min(2vw, 0.8em);
+  font-size: min(2vmin, 0.8em);
 }
 
 @media (min-width: 1080px) {
   header,
-  form {
+form {
     min-height: 20vh;
   }
 }
@@ -98,31 +90,24 @@ form {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 #add-container #add {
   padding: 0.2em;
   font-size: 3.5em;
-  background-image: linear-gradient(
-    45deg,
-    #37e2d5,
-    #52e5ac,
-    #87e379,
-    #bfdb43,
-    #fbcb0a,
-    #f94c66
-  );
+  background-image: linear-gradient(45deg, #37e2d5, #52e5ac, #87e379, #bfdb43, #fbcb0a, #f94c66);
   background-size: 300%;
   -webkit-background-clip: text;
-  background-clip: text;
+          background-clip: text;
   background-color: white;
   color: transparent;
   -webkit-animation: bg-animation 5s infinite alternate;
-  animation: bg-animation 5s infinite alternate;
+          animation: bg-animation 5s infinite alternate;
+  transition-duration: 0.3s;
   -webkit-transition-duration: 0.1s;
 }
 
@@ -139,7 +124,7 @@ form {
 #add-container:hover #add {
   color: white;
   -webkit-transform: rotateZ(180deg);
-  transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
 }
 
 #list {
@@ -148,14 +133,14 @@ form {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 0.5em;
   margin-inline: auto;
   width: max(20em, 65%);
@@ -166,15 +151,15 @@ form {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 7vh;
   width: inherit;
   background: white;
-  font-size: 2em;
+  font-size: max(1.7rem, 3vmin);
 }
 #list .todo:hover {
   width: max(70%, 11em);
@@ -183,10 +168,11 @@ form {
 
 .title {
   -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   margin: 1vh;
   color: black;
+  font-size: 1.5em;
 }
 
 .checkmark,
@@ -210,11 +196,11 @@ form {
 .completed {
   opacity: 0.5;
   -webkit-text-decoration: line-through black;
-  text-decoration: line-through black;
+          text-decoration: line-through black;
 }
 
 .deleted {
   -webkit-transform: translateY(8rem) rotateZ(20deg);
-  transform: translateY(8rem) rotateZ(20deg);
+          transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
-} /*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
